--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 transformers==4.35.0
-torch==2.5.1
+torch==2.1.0
 vaderSentiment==3.3.2
 textblob==0.17.1
 python-multipart==0.0.6
 pydantic==2.5.0
-numpy==1.24.3
+numpy>=1.24.0,<2.0.0
 gdown==4.7.1
